--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -3,3 +3,8 @@
 <div>
   <%= @post.content %>
 </div>
+
+<ul>
+  <li><%= link_to 'Edit', edit_post_path(@post) %></li>
+  <li><%= button_to 'Delete', post_path(@post), method: :delete %></li>
+</ul>
