--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,7 +10,11 @@
   </head>
 
   <body>
-    <%= link_to 'Login', login_path %>
+    <% if logged_in? %>
+      <%= link_to 'Logout', logout_path, method: :delete %>
+    <% else %>
+      <%= link_to 'Login', login_path %>
+    <% end %>
     <%= yield %>
   </body>
 </html>
