modify post only logged in user

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,10 @@
   </head>
 
   <body>
+    <% if flash[:success] %>
+      <p><%= flash[:success] %></p>
+    <% end %>
+
     <% if logged_in? %>
       <%= link_to 'Logout', logout_path, method: :delete %>
     <% else %>
