show edit and delete link only logged in user

--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -4,7 +4,9 @@
   <%= @post.content %>
 </div>
 
+<% if policy(@post).edit? && policy(@post).destroy? %>
 <ul>
   <li><%= link_to 'Edit', edit_post_path(@post) %></li>
   <li><%= button_to 'Delete', post_path(@post), method: :delete %></li>
 </ul>
+<% end %>
