--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,11 +1,32 @@
-<h1>Posts</h1>
-
-<% if policy(Post.new).new? %>
-<%= link_to 'New Post', new_post_path %>
-<% end %>
-
-<ul>
 <% @posts.each do |post| %>
-  <li><%= link_to post.title, post_path(post) %></li>
+  <section class="section">
+    <div class="container">
+      <div class="level">
+        <div class="level-left">
+          <div class="level-item">
+            <h2 class="title is-2">
+              <%= link_to post_path(post) do %>
+                <%= post.title %>
+              <% end %>
+            </h2>
+          </div>
+        </div>
+        <div class="level-right">
+          <div class="level-item">
+            <p class="subtitle is-6">
+              <% if policy(post).edit? %>
+                <%= link_to edit_post_path(post) do %>
+                <span class="icon has-text-info">
+                  <i class="fas fa-edit"></i>
+                </span>
+                <% end %>
+              <% end %>
+            </p>
+          </div>
+        </div>
+      </div>
+
+      <%= simple_format(post.content) %>
+    </div>
+  </section>
 <% end %>
-</ul>
