--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -1,5 +1,16 @@
 <%= form_with model: post do |f| %>
-  <%= f.label :title %>:<%= f.text_field :title %><br>
-  <%= f.label :content %>:<%= f.text_area :content, size: '100x20' %><br>
-  <%= f.submit %>
+  <div class="field">
+    <div class="control">
+      <%= f.text_field :title, class: 'input', placeholder: 'Title' %><br>
+    </div>
+  </div>
+  <div class="field">
+    <div class="control">
+      <%= f.text_area :content, class: 'textarea', rows: 40, placeholder: 'Content' %><br>
+    </div>
+  </div>
+
+  <div class="control">
+    <%= f.submit class: 'button is-link' %>
+  </div>
 <% end %>
