--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,3 +1,5 @@
-<h1>New post</h1>
-
-<%= render 'form', post: @post %>
+<section class="section">
+  <div class="container">
+    <%= render 'form', post: @post %>
+  </div>
+</section>
