--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,12 +1,30 @@
-<h1><%= @post.title %></h1>
+<section class="section">
+  <div class="container">
+    <div class="level">
+      <div class="level-left">
+        <div class="level-item">
+          <h1 class="title is-1">
+            <%= @post.title %>
+          </h1>
+        </div>
+      </div>
+      <div class="level-right">
+        <div class="level-item">
+          <p class="subtitle is-6">
+            <% if policy(@post).edit? %>
+              <%= link_to edit_post_path(@post) do %>
+                <span class="icon has-text-info">
+                  <i class="fas fa-edit"></i>
+                </span>
+              <% end %>
+            <% end %>
+          </p>
+        </div>
+      </div>
+    </div>
 
-<div>
-  <%= simple_format(@post.content) %>
-</div>
-
-<% if policy(@post).edit? && policy(@post).destroy? %>
-<ul>
-  <li><%= link_to 'Edit', edit_post_path(@post) %></li>
-  <li><%= button_to 'Delete', post_path(@post), method: :delete %></li>
-</ul>
-<% end %>
+    <div class="content">
+      <%= simple_format(@post.content) %>
+    </div>
+  </div>
+</section>
