--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,29 +13,7 @@
 
   <body>
     <%= render 'flash' %>
-
-    <nav class="navbar" role="navigation" aria-label="main navigation">
-      <div class="navbar-brand">
-        <%= link_to root_path, class: 'navbar-item' do %>
-          Blg
-        <% end %>
-      </div>
-
-      <div class="navbar-menu">
-        <div class="navbar-start">
-
-        </div>
-        <div class="navbar-end">
-          <div class="navbar-item">
-            <div class="buttons">
-              <%= link_to 'New Post', new_post_path, class: 'button' if policy(Post).new? && !current_page?(new_post_path) %>
-              <%= link_to 'Logout', logout_path, method: :delete, class: 'button is-primary' if logged_in? %>
-            </div>
-          </div>
-        </div>
-      </div>
-    </nav>
-
+    <%= render 'navbar' %>
 
     <%= yield %>
   </body>
