--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -24,7 +24,7 @@
       </div>
 
       <div class="content">
-        <%= simple_format(post.content) %>
+        <%= post.content %>
       </div>
     </div>
   </section>
