--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -1,17 +1,17 @@
 <%= form_with model: post do |f| %>
   <div class="field">
     <div class="control">
-      <%= f.text_field :title, class: 'input', placeholder: 'Title' %>
-    </div>
-  </div>
-  <div class="field">
-    <div class="control">
-      <%= f.text_area :content, class: 'textarea', rows: 40, placeholder: 'Content' %>
-    </div>
-  </div>
-  <div class="field">
-    <div class="control">
       <%= f.date_field :posted_at, class: 'input' %>
+    </div>
+  </div>
+  <div class="field">
+    <div class="control">
+      <%= f.text_field :title, class: 'input is-large', placeholder: 'Title' %>
+    </div>
+  </div>
+  <div class="field">
+    <div class="control">
+      <%= f.rich_text_area :content, class: 'textarea', rows: 40, placeholder: 'Content' %>
     </div>
   </div>
 
