--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -21,7 +21,7 @@
     </div>
 
     <div class="content">
-      <%= simple_format(@post.content) %>
+      <%= @post.content %>
     </div>
   </div>
 </section>
