fix styling of rich text editor

--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -11,7 +11,9 @@
   </div>
   <div class="field">
     <div class="control">
-      <%= f.rich_text_area :content, class: 'textarea', rows: 40, placeholder: 'Content' %>
+      <div class="content">
+        <%= f.rich_text_area :content, class: 'textarea', rows: 40, placeholder: 'Content' %>
+      </div>
     </div>
   </div>
 
