change posted_at to published_at

--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -4,7 +4,7 @@
       <div class="columns is-mobile is-vcentered">
         <div class="column">
           <div>
-            <p class="heading"><%= post.posted_date %></p>
+            <p class="heading"><%= post.published_date %></p>
             <p class="title">
               <%= link_to post_path(post) do %>
                 <%= post.title %>
