--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -3,7 +3,7 @@
     <div class="columns is-mobile is-vcentered">
       <div class="column">
         <div>
-          <p class="heading"><%= @post.posted_date %></p>
+          <p class="heading"><%= @post.published_date %></p>
           <p class="title">
             <%= @post.title %>
           </p>
