--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -1,7 +1,7 @@
 <%= form_with model: post do |f| %>
   <div class="field">
     <div class="control">
-      <%= f.date_field :posted_at, class: 'input' %>
+      <%= f.date_field :published_at, class: 'input' %>
     </div>
   </div>
   <div class="field">
