--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -7,6 +7,11 @@
           <p class="title">
             <%= @post.title %>
           </p>
+          <p class="subtitle">
+            <% @post.tags.each do |tag| %>
+              <span class="tag"><%= tag.name %></span>
+            <% end %>
+          </p>
         </div>
       </div>
       <div class="column is-1 has-text-centered">
