--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -11,6 +11,13 @@
   </div>
   <div class="field">
     <div class="control">
+      <div class="select is-multiple">
+        <%= f.collection_select :tag_ids, Tag.all, :id, :name, { include_hidden: false }, { multiple: true } %>
+      </div>
+    </div>
+  </div>
+  <div class="field">
+    <div class="control">
       <div class="content">
         <%= f.rich_text_area :content, class: 'textarea', rows: 40, placeholder: 'Content' %>
       </div>
