--- a/app/views/tags/show.html.erb
+++ b/app/views/tags/show.html.erb
@@ -1,4 +1,4 @@
-<% @posts.each do |post| %>
+<% @tag.posts.each do |post| %>
   <section class="section">
     <div class="container">
       <div class="columns is-mobile is-vcentered">
