--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -23,6 +23,13 @@
       </div>
     </div>
   </div>
+  <div class="field">
+    <div class="control">
+      <div class="select">
+        <%= f.select :status, Post.statuses.keys %>
+      </div>
+    </div>
+  </div>
 
   <div class="control">
     <%= f.submit class: 'button is-link' %>
