--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,34 +1,1 @@
-<section class="section">
-  <div class="container">
-    <div class="columns is-mobile is-vcentered">
-      <div class="column">
-        <div>
-          <p class="heading"><%= @post.published_date %></p>
-          <p class="title">
-            <%= @post.title %>
-          </p>
-          <p class="subtitle">
-            <% @post.tags.each do |tag| %>
-              <%= link_to tag_path(tag) do %>
-                <span class="tag"><%= tag.name %></span>
-              <% end %>
-            <% end %>
-          </p>
-        </div>
-      </div>
-      <div class="column is-1 has-text-centered">
-        <% if policy(@post).edit? %>
-          <%= link_to edit_post_path(@post) do %>
-            <span class="icon has-text-info">
-              <i class="fas fa-edit"></i>
-            </span>
-          <% end %>
-        <% end %>
-      </div>
-    </div>
-
-    <div class="content">
-      <%= @post.content %>
-    </div>
-  </div>
-</section>
+<%= render @post %>
