--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,3 +1,6 @@
-<% title @post.title %>
-<% set_meta_tags og: { type: 'article' } %>
+<% set_meta_tags title: @post.title,
+                 og: {
+                   type: 'article',
+                   title: :title
+                 } %>
 <%= render @post %>
