--- a/app/views/application/_navbar.html.erb
+++ b/app/views/application/_navbar.html.erb
@@ -1,19 +1,27 @@
 <nav class="navbar" role="navigation" aria-label="main navigation">
   <div class="navbar-brand">
-    <%= link_to root_path, class: 'navbar-item' do %>
+    <%= link_to root_path, class: "navbar-item" do %>
+      <%= image_tag "https://www.gravatar.com/avatar/11148320361c31b9e19075ccec589408" %>
       <%= ENV.fetch('BLOG_TITLE') %>
     <% end %>
+
+    <a role="button" class="navbar-burger burger" aria-label="menu" aria-expanded="false" data-target="navbarBasicExample">
+      <span aria-hidden="true"></span>
+      <span aria-hidden="true"></span>
+      <span aria-hidden="true"></span>
+    </a>
   </div>
 
-  <div class="navbar-menu">
+  <div id="navbarBasicExample" class="navbar-menu">
     <div class="navbar-start">
-
+      <%= link_to "Drafts", posts_drafts_path, class: "navbar-item" if policy(Post).draft? %>
     </div>
+
     <div class="navbar-end">
       <div class="navbar-item">
         <div class="buttons">
-          <%= link_to 'New Post', new_post_path, class: 'button' if policy(Post).new? && !current_page?(new_post_path) %>
-          <%= link_to 'Logout', logout_path, method: :delete, class: 'button is-primary' if logged_in? %>
+          <%= link_to "New Post", new_post_path, class: "button is-primary" if policy(Post).new? && !current_page?(new_post_path) %>
+          <%= link_to "Logout", logout_path, method: :delete, class: "button is-light" if logged_in? %>
         </div>
       </div>
     </div>
