--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_with model: post do |f| %>
+<%= form_with model: post, local: true do |f| %>
   <div class="field">
     <div class="control">
       <%= f.datetime_local_field :published_at, class: 'input' %>
