--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -26,7 +26,7 @@
   <div class="field">
     <div class="control">
       <div class="select">
-        <%= f.select :status, Post.statuses.keys %>
+        <%= f.select :status, Blg::Post.statuses.keys %>
       </div>
     </div>
   </div>
