--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -12,7 +12,7 @@
   <div class="field">
     <div class="control">
       <div class="select is-multiple">
-        <%= f.collection_select :tag_ids, Tag.all, :id, :name, { include_hidden: false }, { multiple: true } %>
+        <%= f.collection_select :tag_ids, Blg::Tag.all, :id, :name, { include_hidden: false }, { multiple: true } %>
       </div>
     </div>
   </div>
