style: 💄 Fix horizontal scroll on mobile device

--- a/app/views/blg/posts/_post.html.erb
+++ b/app/views/blg/posts/_post.html.erb
@@ -1,4 +1,4 @@
-<section class="section">
+<section class="section is-word-break">
   <p class="heading">
     <%= post.published_date %>
     <% if policy(post).edit? %>
