--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -32,7 +32,7 @@
     <%= render 'flash' %>
     <%= render 'navbar' %>
 
-    <main class="columns">
+    <main class="columns is-gapless">
       <div class="container">
         <%= yield %>
       </div>
