refactor: 💡 Change css class name

--- a/app/views/blg/posts/_post.html.erb
+++ b/app/views/blg/posts/_post.html.erb
@@ -1,4 +1,4 @@
-<section class="section is-word-break">
+<section class="section is-text-wrapped">
   <p class="heading">
     <%= post.published_date %>
     <% if policy(post).edit? %>
