style: 💄 Improve notification design

--- a/app/javascript/src/stylesheets/application.scss
+++ b/app/javascript/src/stylesheets/application.scss
@@ -5,3 +5,8 @@
 .section.is-text-wrapped {
   overflow-wrap: break-word;
 }
+
+.heavens-door-custom {
+  top: inherit !important;
+  bottom: 10px;
+}
