--- a/app/views/application/_flash.html.erb
+++ b/app/views/application/_flash.html.erb
@@ -1,5 +1,5 @@
 <% flash.each do |type, message| %>
-  <div class="notification is-<%= type %>">
+  <div class="notification is-<%= type %> is-radiusless is-marginless">
     <button class="delete"></button>
     <p><%= message %></p>
   </div>
