--- a/app/views/application/_navbar.html.erb
+++ b/app/views/application/_navbar.html.erb
@@ -1,26 +1,46 @@
 <nav class="navbar is-spaced has-shadow" role="navigation" aria-label="main navigation">
   <div class="navbar-brand">
     <%= link_to root_path, class: "navbar-item" do %>
-      <span class="icon is-large">
-        <%= image_tag "https://www.gravatar.com/avatar/11148320361c31b9e19075ccec589408" %>
+      <span class="icon is-medium">
+        <%= image_tag "https://www.gravatar.com/avatar/11148320361c31b9e19075ccec589408", class: "image is-rounded" %>
       </span>
       <span class="is-size-4 has-text-weight-bold">
         <%= ENV.fetch('BLOG_TITLE') %>
       </span>
     <% end %>
-
-    <a role="button" class="navbar-burger burger" aria-label="menu" aria-expanded="false" data-target="navbarBasicExample">
-      <span aria-hidden="true"></span>
-      <span aria-hidden="true"></span>
-      <span aria-hidden="true"></span>
-    </a>
+    <% if policy(Blg::Post).draft? %>
+      <div class="navbar-item is-hidden-desktop">
+        <%= link_to posts_drafts_path, class: "button" do %>
+          <span class="icon">
+            <i class="fas fa-th-list"></i>
+          </span>
+        <% end %>
+      </div>
+    <% end %>
+    <% if policy(Blg::Post).new? && !current_page?(new_post_path) %>
+      <div class="navbar-item is-hidden-desktop">
+        <%= link_to new_post_path, class: "button is-primary" do %>
+          <span class="icon">
+            <span class="fas fa-plus"></span>
+          </span>
+        <% end%>
+      </div>
+    <% end %>
+    <% if logged_in? %>
+      <div class="navbar-item is-hidden-desktop">
+        <%= link_to logout_path, method: :delete, class: "button is-light" do %>
+          <span class="icon">
+            <span class="fas fa-sign-out-alt"></span>
+          </span>
+        <% end %>
+      </div>
+    <% end %>
   </div>
 
-  <div id="navbarBasicExample" class="navbar-menu">
+  <div class="navbar-menu">
     <div class="navbar-start">
       <%= link_to "Drafts", posts_drafts_path, class: "navbar-item" if policy(Blg::Post).draft? %>
     </div>
-
     <div class="navbar-end">
       <div class="navbar-item">
         <div class="buttons">
