--- a/app/views/application/_navbar.html.erb
+++ b/app/views/application/_navbar.html.erb
@@ -2,7 +2,7 @@
   <div class="navbar-brand">
     <%= link_to root_path, class: "navbar-item" do %>
       <span class="icon is-medium">
-        <%= image_tag "https://www.gravatar.com/avatar/11148320361c31b9e19075ccec589408", class: "image is-rounded" %>
+        <%= image_tag "https://www.gravatar.com/avatar/11148320361c31b9e19075ccec589408", class: "image is-radius" %>
       </span>
       <span class="is-size-4 has-text-weight-bold">
         <%= ENV.fetch('BLOG_TITLE') %>
