--- a/app/views/tags/show.html.erb
+++ b/app/views/tags/show.html.erb
@@ -1,1 +1,9 @@
+<section class="hero">
+  <div class="hero-body">
+    <div class="container">
+      <h1 class="title">Tag: "<%= @tag.name %>"</h1>
+    </div>
+  </div>
+</section>
+
 <%= render @posts %>
