bin/rails css:install:bulma

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -26,6 +26,7 @@
     <%= javascript_pack_tag 'application' %>
 
     <%= auto_discovery_link_tag :atom, feed_url, title: 'Atom' %>
+    <%= stylesheet_link_tag "application" %>
   </head>
 
   <body>
