--- a/app/assets/stylesheets/application.bulma.scss
+++ b/app/assets/stylesheets/application.bulma.scss
@@ -42,6 +42,8 @@ $family-sans-serif: "Noto Sans JP", "游ゴシック Medium", YuGothic, YuGothic
 
 @import 'bulma/bulma';
 @import '@fortawesome/fontawesome-free/css/all.css';
+@import 'actiontext';
+@import 'trix-toolbar';
 
 body {
   font-kerning: auto;
