bin/rails javascript:install:esbuild

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -25,6 +25,7 @@
     <%= javascript_pack_tag 'application' %>
 
     <%= auto_discovery_link_tag :atom, feed_url, title: 'Atom' %>
+    <%= javascript_include_tag "application", "data-turbo-track": "reload", defer: true %>
   </head>
 
   <body>
