--- a/app/assets/stylesheets/application.bulma.scss
+++ b/app/assets/stylesheets/application.bulma.scss
@@ -41,10 +41,10 @@ $family-sans-serif: "Noto Sans JP", "游ゴシック Medium", YuGothic, YuGothic
 // @import "bulma/sass/layout/section.sass";
 
 @import 'bulma/bulma';
-@import '@fortawesome/fontawesome-free/css/all.css';
+@import '@fortawesome/fontawesome-free/css/all';
 @import 'actiontext.css';
 @import 'trix-toolbar';
-@import 'highlight.js/styles/default.css';
+@import 'highlight.js/styles/default';
 
 body {
   font-kerning: auto;
