--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,15 +19,11 @@
 
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
-    <%= stylesheet_link_tag "tailwind", "inter-font", "data-turbo-track": "reload" %>
 
-    <%= stylesheet_link_tag 'https://fonts.googleapis.com/css?family=Noto+Sans+JP', media: 'all' %>
-    <%= javascript_include_tag "application" %>
-    <%= stylesheet_link_tag "tailwind", "inter-font", "data-turbo-track": "reload" %>
+    <%= stylesheet_link_tag "tailwind", "inter-font" %>
     <%= stylesheet_link_tag "application" %>
-
-    <%= auto_discovery_link_tag :atom, feed_url, title: 'Atom' %>
     <%= javascript_importmap_tags %>
+    <%= auto_discovery_link_tag :atom, feed_url, title: 'Atom' %>
   </head>
 
   <body>
