--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,16 +1,36 @@
 <!DOCTYPE html>
-<html>
+<html prefix="og: http://ogp.me/ns#">
   <head>
-    <title>Blg</title>
+    <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1">
+    <%= display_meta_tags site: ENV.fetch("BLOG_TITLE"),
+                          description: ENV.fetch("BLOG_TITLE"),
+                          reverse: true,
+                          og: {
+                            title: :site,
+                            description: :description,
+                            url: request.url,
+                            image: {
+                              _: "https://www.gravatar.com/avatar/11148320361c31b9e19075ccec589408?size=200",
+                              width: 200,
+                              height: 200
+                            },
+                          } %>
+
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
     <%= stylesheet_link_tag "application", "data-turbo-track": "reload" %>
     <%= javascript_include_tag "application", "data-turbo-track": "reload", defer: true %>
+
+    <%#= auto_discovery_link_tag :atom, feed_url, title: 'Atom' %>
   </head>
 
   <body>
-    <%= yield %>
+    <main class="columns is-gapless">
+      <div class="container">
+        <%= yield %>
+      </div>
+    </main>
   </body>
 </html>
