--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -27,10 +27,15 @@
   </head>
 
   <body>
+    <%= render 'navbar' %>
+    <%= render 'flash' %>
+
     <main class="columns is-gapless">
       <div class="container">
         <%= yield %>
       </div>
     </main>
+
+    <%= render 'footer' %>
   </body>
 </html>
