--- a/app/views/posts/_post.html.erb
+++ b/app/views/posts/_post.html.erb
@@ -1,7 +1,27 @@
-<p><%= link_to post.title, post_path(post) %></p>
-
-<%= link_to edit_post_path(post) do %>
-  Edit
-<% end %>
-
-<p><%= post.content %></p>
+<section class="section is-text-wrapped">
+  <p class="heading">
+    <%= post.published_date %>
+    <% if policy(post).edit? %>
+      <%= link_to edit_post_path(post) do %>
+        <span class="icon has-text-info">
+          <i class="fas fa-edit"></i>
+        </span>
+      <% end %>
+    <% end %>
+  </p>
+  <h1 class="title">
+    <%= link_to post.title, post_path(post) %>
+  </h1>
+  <% if post.tags.size > 0 %>
+    <p class="subtitle">
+      <% post.tags.each do |tag| %>
+        <%= link_to tag_path(tag) do %>
+          <span class="tag"><%= tag.name %></span>
+        <% end %>
+      <% end %>
+    </p>
+  <% end %>
+  <div class="content">
+    <%= post.content %>
+  </div>
+</section>
