--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,1 +1,6 @@
+<% set_meta_tags title: @post.title,
+                 og: {
+                   type: 'article',
+                   title: :title
+                 } %>
 <%= render @post %>
