--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -24,7 +24,7 @@
     <%= stylesheet_link_tag "application" %>
     <%= javascript_include_tag "application", defer: true %>
 
-    <%#= auto_discovery_link_tag :atom, feed_url, title: 'Atom' %>
+    <%= auto_discovery_link_tag :atom, feed_url, title: 'Atom' %>
   </head>
 
   <body>
