--- a/app/assets/stylesheets/application.bulma.scss
+++ b/app/assets/stylesheets/application.bulma.scss
@@ -43,5 +43,4 @@ $fa-font-path: "@fortawesome/fontawesome-free/webfonts";
 @import '@fortawesome/fontawesome-free/scss/solid';
 @import '@fortawesome/fontawesome-free/scss/brands';
 @import 'actiontext.css';
-
-
+@import 'highlight.js/styles/default';
