add trix toolbar button

--- a/app/assets/stylesheets/application.bulma.scss
+++ b/app/assets/stylesheets/application.bulma.scss
@@ -47,6 +47,7 @@ $fa-font-path: "@fortawesome/fontawesome-free/webfonts";
 @import '@fortawesome/fontawesome-free/scss/solid';
 @import '@fortawesome/fontawesome-free/scss/brands';
 @import 'actiontext.css';
+@import 'trix-toolbar';
 @import 'highlight.js/styles/default';
 
 body {
