--- a/app/views/auths/show.html.erb
+++ b/app/views/auths/show.html.erb
@@ -9,7 +9,7 @@
 
     <%= stylesheet_link_tag 'https://fonts.googleapis.com/css?family=Noto+Sans+JP', media: 'all' %>
     <%= stylesheet_link_tag "application" %>
-    <%= javascript_include_tag "application", defer: true %>
+    <%= javascript_include_tag "application" %>
   </head>
 
   <body>
