--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,7 +22,7 @@
 
     <%= stylesheet_link_tag 'https://fonts.googleapis.com/css?family=Noto+Sans+JP', media: 'all' %>
     <%= stylesheet_link_tag "application" %>
-    <%= javascript_include_tag "application", defer: true %>
+    <%= javascript_include_tag "application" %>
 
     <%= auto_discovery_link_tag :atom, feed_url, title: 'Atom' %>
   </head>
