fix trix toolbar styling

--- a/app/assets/stylesheets/application.bulma.scss
+++ b/app/assets/stylesheets/application.bulma.scss
@@ -46,7 +46,7 @@ $fa-font-path: "@fortawesome/fontawesome-free/webfonts";
 @import '@fortawesome/fontawesome-free/scss/fontawesome';
 @import '@fortawesome/fontawesome-free/scss/solid';
 @import '@fortawesome/fontawesome-free/scss/brands';
-@import 'actiontext';
+@import 'actiontext.css';
 @import 'trix-toolbar';
 @import 'highlight.js/styles/default';
 
